Mejorando labels y apariencia de secciones

--- a/core/templates/aci.html
+++ b/core/templates/aci.html
@@ -33,7 +33,7 @@ Ahorro corriente de inversion  {{ municipio }}
     <div id="aciTabContent" class="tab-content">
       <div role="tabpanel" class="tab-pane fade active in" id="asignados" aria-labelledby="asignados-tab">
         <!--maribel 20/07 - ingresos resumen -->
-        <div class="row separador">
+        <div class="row  alert alert-success">
             <div class="col-md-12">
                 <div class="col-md-4">
                     <img src="{% static 'img/gfasignado.png' %}" class="img-responsive margen pull-left" alt="ingreso de funcionamiento asignado" />
