--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -61,7 +61,6 @@
             <div id="navbar" class="navbar-collapse collapse pull-right">
               <ul class="nav navbar-nav">
                 <li class="active"><a href="{% url 'home' %}">INICIO</a></li>
-                <li><a href="/significado/">&iquest;QU&Eacute; SIGNIFICA?</a></li>
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">PRESUPUESTOS <span class="caret"></span></a>
                   <ul class="dropdown-menu" role="menu">
@@ -77,7 +76,8 @@
                   </ul>
                 </li>
                 <li><a href="/core/plan-de-inversion/?inversion__anio=2015&inversion__municipio=1">PLANES DE INVERSIÓN</a></li>
-                    <li><a href="#contact">CONTÁCTENOS</a></li>
+                <li><a href="#contact">GLOSARIO</a></li>
+                <li><a href="/significado/">PRESENTACIÓN</a></li>
               </ul>
             </div>
           </div>
